--- a/src/Version2.css
+++ b/src/Version2.css
@@ -59,6 +59,7 @@
 }
 
 .title2-body button {
+  cursor: pointer;
   padding: 0.5rem 1rem;
   font-size: 1.3rem;
   width: 40%;
@@ -67,6 +68,8 @@
   font-family: "Roboto", sans-serif;
   border: none;
   border-radius: 10px;
+  box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0, 0, 0, 0.6);
+  transition: all 0.5s;
 }
 
 .btn-header2 {
@@ -80,6 +83,19 @@
   background-color: #535b7b;
 }
 
+.lengthOfGuess-container2 > button:active {
+  transition: all 150ms ease;
+}
+
+.lengthOfGuess-container2 > button:active {
+  text-shadow: 0 -1px 0 #444, 0 0 5px #ffd, 0 0 8px #fff;
+  box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0, 0, 0, 0.9);
+  -webkit-transform: translateY(3px);
+  transform: translateY(3px);
+  -webkit-animation: none;
+  animation: none;
+}
+
 .search-criteries-button-container {
   display: flex;
   flex-wrap: wrap;
@@ -91,7 +107,13 @@
 }
 
 .title2-body .btn-inactive {
+  transform: scale(0.95);
   opacity: 0.3;
+  box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0, 0, 0, 0.9);
+  -webkit-transform: translateY(3px);
+  transform: translateY(3px);
+  -webkit-animation: none;
+  animation: none;
 }
 
 .title2-body .search-btn {
@@ -466,4 +488,12 @@
 
 .title2-body .pokemon-name-container > div > p {
   margin-top: 0.3rem;
+}
+
+/* ===============
+    media query
+    =============== */
+
+/* 50em = 800px */
+@media (min-width: 52em) {
 }
