--- a/src/Version2.css
+++ b/src/Version2.css
@@ -83,11 +83,21 @@
   background-color: #535b7b;
 }
 
+.btn-header2 > button,
 .lengthOfGuess-container2 > button:active {
   transition: all 150ms ease;
 }
 
 .lengthOfGuess-container2 > button:active {
+  text-shadow: 0 -1px 0 #444, 0 0 5px #ffd, 0 0 8px #fff;
+  box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0, 0, 0, 0.9);
+  -webkit-transform: translateY(3px);
+  transform: translateY(3px);
+  -webkit-animation: none;
+  animation: none;
+}
+
+.btn-header2 > button:active {
   text-shadow: 0 -1px 0 #444, 0 0 5px #ffd, 0 0 8px #fff;
   box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0, 0, 0, 0.9);
   -webkit-transform: translateY(3px);
@@ -268,7 +278,7 @@
   min-width: 1rem;
   max-width: 2rem;
   border: none;
-  border-bottom: 1px solid var(--white);
+  border-bottom: 3px solid var(--white);
   margin: 1rem 0.5rem;
   text-align: center;
   background-color: transparent;
