--- a/src/Version2.css
+++ b/src/Version2.css
@@ -9,6 +9,7 @@
     3.4 search
     3.5 loader
     3.6 pokemon-card
+    3.7 btn-focus
 5. media query
 */
 
@@ -59,6 +60,7 @@
 }
 
 .title2-body button {
+  position: relative;
   cursor: pointer;
   padding: 0.5rem 1rem;
   font-size: 1.3rem;
@@ -220,6 +222,7 @@
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  animation-timing-function: ease-in-out;
   pointer-events: none;
 }
 
@@ -501,9 +504,87 @@
 }
 
 /* ===============
+    btn-focus
+   =============== */
+.title2-body button:focus {
+  outline: none;
+}
+
+.title2-body button:hover::before,
+.title2-body button:focus::before,
+.title2-body button:hover::after,
+.title2-body button:focus::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  min-width: 20px;
+  min-height: 20px;
+  background-color: aqua;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+}
+
+.title2-body button:hover::before,
+.title2-body button:focus::before {
+  top: 0;
+  left: 0;
+  clip-path: polygon(0 0, 100% 0, 100% 15%, 15% 15%, 15% 100%, 0 100%);
+  animation-name: move-top-left-border;
+}
+
+.title2-body button:hover::after,
+.title2-body button:focus::after {
+  right: 0;
+  bottom: 0;
+  clip-path: polygon(85% 85%, 80% 0, 100% 0, 100% 100%, 0 100%, 0 85%);
+  animation-name: move-bottom-right-border;
+}
+
+@keyframes move-top-left-border {
+  0% {
+    top: 0;
+    left: 0;
+  }
+  100% {
+    top: -3px;
+    left: -3px;
+  }
+}
+
+@keyframes move-bottom-right-border {
+  0% {
+    right: 0;
+    bottom: 0;
+  }
+  100% {
+    right: -3px;
+    bottom: -3px;
+  }
+}
+
+/* ===============
     media query
     =============== */
 
 /* 50em = 800px */
 @media (min-width: 52em) {
 }
+
+/* .click-to-start {
+  animation-name: click-start;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+}
+
+@keyframes click-start {
+  0% {
+    font-size: 1.5rem;
+  }
+  100% {
+    font-size: 2rem;
+  }
+} */
