--- a/src/Version2.css
+++ b/src/Version2.css
@@ -28,6 +28,8 @@
   --pokeLogoBlue: rgb(42, 117, 187);
   --background: #feb47b;
   --darkpurple: #160c28;
+  --headerBackground: coral;
+  --headerShadow: #ea835e;
 }
 
 * {
@@ -40,12 +42,26 @@
   background: var(--background);
 }
 
+.page2-title-div {
+  display: flex;
+  justify-content: center;
+}
+
 .page2-title {
   font-size: 3rem;
-  padding: 1rem 0 2rem 0;
+  margin: 1rem 0 2rem 0;
   text-align: center;
   color: white;
   font-family: "Roboto", sans-serif;
+  letter-spacing: 3px;
+  text-shadow: 0px 0px 2px rgb(255, 255, 255);
+  padding: 1rem 5rem;
+  border: 2px dashed white;
+  background-color: var(--headerBackground);
+  box-shadow: 5px 5px var(--headerBackground), -5px -5px var(--headerBackground),
+    -5px 5px var(--headerBackground), 5px -5px var(--headerBackground),
+    5px 13px var(--headerShadow), 13px 5px var(--headerShadow),
+    13px 13px var(--headerShadow);
 }
 
 .version2-page-container {
