--- a/src/Version2.css
+++ b/src/Version2.css
@@ -49,7 +49,7 @@
 
 .page2-title {
   font-size: 3rem;
-  margin: 1rem 0 2rem 0;
+  margin: 1rem 0 4rem 0;
   text-align: center;
   color: white;
   font-family: "Roboto", sans-serif;
@@ -285,6 +285,8 @@
   font-size: 2rem;
   padding: 0;
   margin: 0 1rem;
+  min-width: 50px;
+  text-align: center;
 }
 
 .lengthOfGuess-string2 {
@@ -327,8 +329,23 @@
   max-width: 200px;
   margin: 1rem auto 4rem auto;
   border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
   color: var(--white);
-  background: var(--darkblue);
+  box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0, 0, 0, 0.6);
+  background: #1fa2ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #a6ffcb,
+    #12d8fa,
+    #1fa2ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #a6ffcb,
+    #12d8fa,
+    #1fa2ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .title2-body .switches label {
