--- a/src/Version2.css
+++ b/src/Version2.css
@@ -26,7 +26,11 @@
   --gray: rgb(128, 128, 128);
   --pokeLogoYellow: rgba(255, 203, 5);
   --pokeLogoBlue: rgb(42, 117, 187);
-  --background: #feb47b;
+  --background: linear-gradient(
+    180deg,
+    rgb(254, 180, 123) 0%,
+    rgb(255, 185, 132) 100%
+  );
   --darkpurple: #160c28;
   --headerBackground: coral;
   --headerShadow: #ea835e;
@@ -424,71 +428,61 @@
 /* ===============
     loader
    =============== */
-.pokemon-cards-loader2 {
-  font-size: 10px;
-  margin: 50px auto;
-  text-indent: -9999em;
-  width: 11em;
-  height: 11em;
+.pokemon-cards-loader2,
+.pokemon-cards-loader2:before,
+.pokemon-cards-loader2:after {
   border-radius: 50%;
-  background: #18172c;
-  background: -moz-linear-gradient(left, #18172c 10%, rgba(24, 23, 44, 0) 42%);
-  background: -webkit-linear-gradient(
-    left,
-    #18172c 10%,
-    rgba(24, 23, 44, 0) 42%
-  );
-  background: -o-linear-gradient(left, #18172c 10%, rgba(24, 23, 44, 0) 42%);
-  background: -ms-linear-gradient(left, #18172c 10%, rgba(24, 23, 44, 0) 42%);
-  background: linear-gradient(to right, #18172c 10%, rgba(24, 23, 44, 0) 42%);
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.pokemon-cards-loader2 {
+  color: #ffffff;
+  font-size: 10px;
+  margin: 80px auto;
   position: relative;
-  -webkit-animation: load3 1.4s infinite linear;
-  animation: load3 1.4s infinite linear;
+  text-indent: -9999em;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.pokemon-cards-loader2:before,
+.pokemon-cards-loader2:after {
+  content: "";
+  position: absolute;
+  top: 0;
 }
 .pokemon-cards-loader2:before {
-  width: 50%;
-  height: 50%;
-  background: #18172c;
-  border-radius: 100% 0 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
 }
 .pokemon-cards-loader2:after {
-  background: var(--background);
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  content: "";
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  left: 3.5em;
 }
-@-webkit-keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@-webkit-keyframes load7 {
+  0%,
+  80%,
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
   }
 }
-@keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+@keyframes load7 {
+  0%,
+  80%,
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
   }
 }
 
@@ -504,11 +498,13 @@
 }
 
 .title2-body .pokemon-image-card {
+  font-family: "Roboto", sans-serif;
   padding: 0.5rem;
   margin: 0.2rem;
   background-color: var(--darkblue);
   border-radius: 10px;
-  border: 1px solid black;
+  border: 3px solid black;
+  box-shadow: 2px 2px 0px black, 5px 0px 0px black, 5px 2px 0px black;
 }
 
 .title2-body .pokemon-image-card > img {
@@ -602,21 +598,7 @@
 
 /* 50em = 800px */
 @media (min-width: 52em) {
-}
-
-/* .click-to-start {
-  animation-name: click-start;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  animation-direction: alternate;
-}
-
-@keyframes click-start {
-  0% {
-    font-size: 1.5rem;
+  .title2-body .pokemon-image-card:hover {
+    /* transform: rotate(-5deg); */
   }
-  100% {
-    font-size: 2rem;
-  }
-} */
+}
